Fixes and enhancements for the week.